2014-08-27, S3QL 2.11

  * SECURITY UPDATE (CVE-2014-0485).

    A remote code execution vulnerability was fixed.

    An attacker with control over the communication with the storage
    backend or the ability to manipulate the data stored in the
    backend was able to trigger execution of arbitrary code by
    mount.s3ql, fsck.s3ql, mkfs.s3ql, s3qladm and s3ql_verify. Both
    encrypted and unencrypted file systems were vulnerable.

  * s3ql_verify no longer crashes when checking an empty file system.

  * Fixed a crash when using Google OAuth2 and the first request after
    the access token has expired is a write request.

  * mount.s3ql now supports systemd-style readyness notification. To
    use this feature, make sure that you have the 'systemd' module
    installed for Python 3.

    This feature has not been tested, if you use it or encounter
    problems, please report back.

  * Fixed a race condition that could cause tests/t5_failsafe.py to
    fail.

  * mount.s3ql no longer daemonizes on its own. With a modern init
    system this should no longer be necessary, and when running
    mount.s3ql from the command line the shell can be used to put the
    process into background.

  * There is a new --backend-options parameter that can be used to
    pass backend-specific options to any S3QL command that accepts a
    storage url.

  * The --no-ssl and --ssl-ca-path parameters have been removed. For
    those backends were these parameters make sense, you can use the
    backend options of the same name instead (e.g. instead of
    `--no-ssl` use `--backend-options no-ssl`).

  * Several backends now accept a `tcp-timeout` option. If S3QL is
    unable to communicate with the remote server for longer than this
    period, the TCP/IP connection is re-established.

  * The Amazon S3 backend now accepts a 'sse' option to enable server
    side encryption. Both costs & benefits of S3 server side