@@ -1,3 +1,8 @@
+UNRELEASED, S3QL tip
+
+  * Un-encrypted file systems (created with mkfs.s3ql --plain) can now
+    be upgraded to the newest revision.
+
 2014-08-27, S3QL 2.11
 
   * SECURITY UPDATE (CVE-2014-0485).
